Fixed bug on mobile responsiveness!

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -38,7 +38,8 @@ h2 {
     width: 39%;
     margin-left: 22px;
     float: left;
-    margin-top: 100px;
+    margin-top: 20px;
+    margin-left: 20px;
   }
 
   .profile-icon {
