--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,11 +15,12 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
+  padding-top: 120px;
 }
 
 main {
   width: 90vw;
   margin: auto;
   background-color: #F4F1EC;
-  padding: 10px;
+  padding: 18px;
 }
