--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -156,21 +156,7 @@ footer {
 
 @media only screen and (min-width: 768px) {
   .container {
-    position: absolute;
-    width: 50%;
+    width: 58%;
     float: right;
-    top: 49%;
-    left: 70%;
-    transform: translate(-50%, -50%);
-    /* margin: 40% ; */
   }
-
-  /* #wrapper-tweet {
-    position: absolute;
-    width: 51%;
-    top: 62%;
-    left: 68.5%;
-    transform: translate(-50%, -50%);
-    margin: 0;
-  }*/
 };
